--- a/Strings/AppResources.pt.resx
+++ b/Strings/AppResources.pt.resx
@@ -1935,7 +1935,7 @@ Reduza para evitar mais violações.</value>
     <value>Indisponível</value>
   </data>
   <data name="WeightAndBalance.Unavailable.Message" xml:space="preserve">
-    <value>Ativar Freio de Estacionamento no pátio para realizar mudanças no peso e balanceamento no modo online.</value>
+    <value>Ative o Freio de Estacionamento no pátio para realizar mudanças no peso e balanceamento no modo online.</value>
   </data>
   <data name="Error.AgreementNotSigned" xml:space="preserve">
     <value>Um contrato não foi assinado; você deve assinar o contrato para realizar esta ação (error code {0})</value>
@@ -2002,7 +2002,7 @@ Verifique o mapa para mais informações</value>
     <value>Mostrar Aeronaves Antigos</value>
   </data>
   <data name="GroundServices.ConditionsNotMet" xml:space="preserve">
-    <value>Serviços de Solo necessita do Parking Brakes LIGADOS, Beacon Light LIGADOS e Motores DESLIGADOS.</value>
+    <value>Serviços de Solo necessita Parking Brakes LIGADOS, Beacon Light DESLIGADOS e Motores DESLIGADOS.</value>
   </data>
   <data name="Settings.General.Legacy" xml:space="preserve">
     <value>AERONAVE ANTIGO</value>
@@ -2024,5 +2024,8 @@ Verifique o mapa para mais informações</value>
   </data>
   <data name="AircraftPage.LegacyAircraftWarning" xml:space="preserve">
     <value>Atenção: Essa aeronave é um extra incluído de uma versão antiga e não tem a mesma qualidade do que as aeronaves mais novas</value>
+  </data>
+  <data name="SystemMessaging.ProximityWarning" xml:space="preserve">
+    <value>Por favor mantenha uma distância segura com a aeronave à frente</value>
   </data>
 </root>
