--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -2182,4 +2182,7 @@ Ralentissez pour éviter d'autres violations.</value>
   <data name="LoginSubscriptionPage.NoSubscriptionFound" xml:space="preserve">
     <value>Nous avons trouvé votre compte mais vous n'avez pas d'abonnement actif.</value>
   </data>
+  <data name="IntroPage.Home" xml:space="preserve">
+    <value>ACCUEIL</value>
+  </data>
 </root>
